update homepage for mobile

--- a/article/sg0/index.html
+++ b/article/sg0/index.html
@@ -23,19 +23,19 @@
 
 <body>
   <div class="header">
-    <a class="logo" href="">
+    <a class="logo" href="./">
       <img src="./static/image/element/logo-white.png" alt="Steins;Gate 0 Logo">
     </a>
 
     <ul class="clearlist">
       <li id="btn-all">
-        <span>全部路线</span>
+        <span class="active">全部<br>路线</span>
         <img src="./static/image/element/clearlist-tube.png" alt="全部路线">
         <img class="mask1 active"
           src="./static/image/element/clearlist-mask.png" alt="mask1">
       </li>
       <li id="btn-kyoju">
-        <span>教授路线</span>
+        <span>教授<br>路线</span>
         <img src="./static/image/element/clearlist-kyoju.png" alt="教授路线">
         <img class="mask1" src="./static/image/element/clearlist-mask.png"
           alt="mask1">
@@ -43,7 +43,7 @@
           alt="mask2">
       </li>
       <li id="btn-maho">
-        <span>真帆路线</span>
+        <span>真帆<br>路线</span>
         <img src="./static/image/element/clearlist-maho.png" alt="真帆路线">
         <img class="mask1" src="./static/image/element/clearlist-mask.png"
           alt="mask1">
@@ -51,7 +51,7 @@
           alt="mask2">
       </li>
       <li id="btn-kagari">
-        <span>篝路线</span>
+        <span>篝<br>路线</span>
         <img src="./static/image/element/clearlist-kagari.png" alt="篝路线">
         <img class="mask1" src="./static/image/element/clearlist-mask.png"
           alt="mask1">
@@ -59,7 +59,7 @@
           src="./static/image/element/clearlist-mask-kagari.png" alt="mask2">
       </li>
       <li id="btn-kurisu">
-        <span>红莉栖路线</span>
+        <span>红莉栖<br>路线</span>
         <img src="./static/image/element/clearlist-kurisu.png" alt="红莉栖路线">
         <img class="mask1" src="./static/image/element/clearlist-mask.png"
           alt="mask1">
@@ -67,7 +67,7 @@
           src="./static/image/element/clearlist-mask-kurisu.png" alt="mask2">
       </li>
       <li id="btn-mayuri">
-        <span>真由理路线</span>
+        <span>真由理<br>路线</span>
         <img src="./static/image/element/clearlist-mayuri.png" alt="真由理路线">
         <img class="mask1" src="./static/image/element/clearlist-mask.png"
           alt="mask1">
@@ -75,7 +75,7 @@
           src="./static/image/element/clearlist-mask-mayuri.png" alt="mask2">
       </li>
       <li id="btn-kyoma">
-        <span>凶真路线</span>
+        <span>凶真<br>路线</span>
         <img src="./static/image/element/clearlist-kyoma.png" alt="凶真路线">
         <img class="mask1" src="./static/image/element/clearlist-mask.png"
           alt="mask1">
