update homepage mobile

--- a/article/sg0/index.html
+++ b/article/sg0/index.html
@@ -28,12 +28,12 @@
     </a>
 
     <ul class="clearlist">
-      <li id="btn-all">
-        <span class="active">全部<br>路线</span>
+      <!-- <li id="btn-all" class="active">
+        <span>全部<br>路线</span>
         <img src="./static/image/element/clearlist-tube.png" alt="全部路线">
-        <img class="mask1 active"
-          src="./static/image/element/clearlist-mask.png" alt="mask1">
-      </li>
+        <img class="mask1" src="./static/image/element/clearlist-mask.png"
+          alt="mask1">
+      </li> -->
       <li id="btn-kyoju">
         <span>教授<br>路线</span>
         <img src="./static/image/element/clearlist-kyoju.png" alt="教授路线">
@@ -85,8 +85,8 @@
     </ul>
   </div>
 
-  <ol class="page-index"></ol>
   <ul class="menu"></ul>
+  <ol class="page-index"></ol>
 
 </body>
 
