update draft to 0140

--- a/article/sg0/static/script/menu.html
+++ b/article/sg0/static/script/menu.html
@@ -129,3 +129,13 @@
 <li class="ed-kurisu"> <a href="./doc/0128">盟誓的文艺复兴 - 06</a> </li>
 <li class="ed-kurisu"> <a href="./doc/0129">盟誓的文艺复兴 - 07</a> </li>
 <li class="ed-kurisu"> <a href="./doc/0130">盟誓的文艺复兴 - 08</a> </li>
+<li class="ed-kurisu"> <a href="./doc/0131">盟誓的文艺复兴 - 09</a> </li>
+<li class="ed-kurisu"> <a href="./doc/0132">盟誓的文艺复兴 - 10</a> </li>
+<li class="ed-kurisu"> <a href="./doc/0133">盟誓的文艺复兴 - 11</a> </li>
+<li class="ed-kurisu"> <a href="./doc/0134">盟誓的文艺复兴 - 12</a> </li>
+<li class="ed-kurisu"> <a href="./doc/0135">盟誓的文艺复兴 - 13</a> </li>
+<li class="ed-kurisu"> <a href="./doc/0136">盟誓的文艺复兴 - 14</a> </li>
+<li class="ed-kurisu"> <a href="./doc/0137">盟誓的文艺复兴 - 15</a> </li>
+<li class="ed-kurisu"> <a href="./doc/0138">盟誓的文艺复兴 - 16</a> </li>
+<li class="ed-kurisu"> <a href="./doc/0139">盟誓的文艺复兴 - 17</a> </li>
+<li class="ed-kurisu"> <a href="./doc/0140">瓦尔基里报告 - 红莉栖结局</a> </li>
