--- a/article/sg0/static/script/menu.html
+++ b/article/sg0/static/script/menu.html
@@ -137,5 +137,5 @@
 <li class="ed-kurisu"> <a href="./doc/0136">盟誓的文艺复兴 - 14</a> </li>
 <li class="ed-kurisu"> <a href="./doc/0137">盟誓的文艺复兴 - 15</a> </li>
 <li class="ed-kurisu"> <a href="./doc/0138">盟誓的文艺复兴 - 16</a> </li>
-<li class="ed-kurisu"> <a href="./doc/0139">盟誓的文艺复兴 - 17</a> </li>
-<li class="ed-kurisu"> <a href="./doc/0140">瓦尔基里报告 - 红莉栖结局</a> </li>
+<li class="ed-kurisu"> <a href="./doc/0139">瓦尔基里报告 - 红莉栖结局</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0140">永劫回归的潘多拉 - 09β</a> </li>
