--- a/article/sg0/static/script/menu.html
+++ b/article/sg0/static/script/menu.html
@@ -139,3 +139,22 @@
 <li class="ed-kurisu"> <a href="./doc/0138">盟誓的文艺复兴 - 16</a> </li>
 <li class="ed-kurisu"> <a href="./doc/0139">瓦尔基里报告 - 红莉栖结局</a> </li>
 <li class="ed-mayuri"> <a href="./doc/0140">永劫回归的潘多拉 - 09β</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0141">永劫回归的潘多拉 - 10</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0142">永劫回归的潘多拉 - 11</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0143">永劫回归的潘多拉 - 12</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0144">永劫回归的潘多拉 - 13</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0145">弹性界限的认知 - 01</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0146">弹性界限的认知 - 02</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0147">弹性界限的认知 - 03</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0148">弹性界限的认知 - 04</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0149">弹性界限的认知 - 05</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0150">弹性界限的认知 - 06</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0151">弹性界限的认知 - 07</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0152">弹性界限的认知 - 08</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0153">无限远点的牵牛星 - 01</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0154">无限远点的牵牛星 - 02</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0155">无限远点的牵牛星 - 03</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0156">无限远点的牵牛星 - 04</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0157">无限远点的牵牛星 - 05</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0158">无限远点的牵牛星 - 06</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0159">无限远点的牵牛星 - 07</a> </li>
