--- a/article/sg0/static/script/menu.html
+++ b/article/sg0/static/script/menu.html
@@ -158,3 +158,8 @@
 <li class="ed-mayuri"> <a href="./doc/0157">无限远点的牵牛星 - 05</a> </li>
 <li class="ed-mayuri"> <a href="./doc/0158">无限远点的牵牛星 - 06</a> </li>
 <li class="ed-mayuri"> <a href="./doc/0159">无限远点的牵牛星 - 07</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0160">无限远点的牵牛星 - 08</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0161">无限远点的牵牛星 - 09</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0162">无限远点的牵牛星 - 10</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0163">无限远点的牵牛星 - 11</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0164">无限远点的牵牛星 - 12</a> </li>
