--- a/article/sg0/static/script/menu.html
+++ b/article/sg0/static/script/menu.html
@@ -163,3 +163,8 @@
 <li class="ed-mayuri"> <a href="./doc/0162">无限远点的牵牛星 - 10</a> </li>
 <li class="ed-mayuri"> <a href="./doc/0163">无限远点的牵牛星 - 11</a> </li>
 <li class="ed-mayuri"> <a href="./doc/0164">无限远点的牵牛星 - 12</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0165">无限远点的牵牛星 - 13</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0166">无限远点的牵牛星 - 14</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0167">无限远点的牵牛星 - 15</a> </li>
+<li class="ed-mayuri"> <a href="./doc/0168">瓦尔基里报告 - 真由理结局</a> </li>
+<li class="ed-kyoma"> <a href="./doc/0169">交叉坐标的星尘</a> </li>
