--- a/article/sg0/static/script/menu.html
+++ b/article/sg0/static/script/menu.html
@@ -168,4 +168,4 @@
 <li class="ed-mayuri"> <a href="./doc/0167">无限远点的牵牛星 - 15</a> </li>
 <li class="ed-mayuri"> <a href="./doc/0168">瓦尔基里报告 - 真由理结局</a> </li>
 <li class="ed-kyoma"> <a href="./doc/0169">交叉坐标的星尘</a> </li>
-<li class="ed-kyoma"> <a href="./doc/0170">瓦尔基里报告 - 真·凤凰院凶真结局</a> </li>
+<li class="ed-kyoma"> <a href="./doc/0170">瓦尔基里报告 - 凶真结局</a> </li>
